added navbar for first element

--- a/index.html
+++ b/index.html
@@ -16,15 +16,27 @@
  </head>
  <body>
         <section class = 's1'>
-            <div class = 'main'>
-            <h1>
-                Hi, My name is Daniil Boika
-            </h1>
-            <p>
-                Some test text
-            </p>
-            <a href="">link</a>
-            </div>
+                <div class = 'main'>
+
+                    <div class="hello">
+                        <h1>Hi, My name is Daniil Boika</h1>
+                    </div>
+
+                        <div class="intro">
+
+                            <div class="Intro-Navigation">
+                                Navigation
+                            </div>
+
+                            <div class="Intro-Left">
+                                Left Column
+                            </div>
+
+                            <div class="Intro-Right">
+                                Right Column
+                            </div>
+                    </div>
+                </div>
         </section>
         <section class = 's2'>
             <div class="main">
