nav bar changes(color change needed)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
                         <div class="intro">
 
                             <div class="Intro-Navigation">
-                                Navigation
+                                <div class="dots">
+                                    <div id='dot-1' class="browser-dot"></div>
+                                    <div id='dot-2' class="browser-dot"></div>
+                                    <div id='dot-3' class="browser-dot"></div>
+                                </div>
+                                <ul id="contacts">
+                                    <li><a href="#">Contact</a></li>
+                                </ul>
                             </div>
 
                             <div class="Intro-Left">
