picture for portfolio added(color change needed)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
                             </div>
 
                             <div class="Intro-Right">
-                                Right Column
+                                <img id='photo' src="img/test.jpg">
+                                <h5 style="text-align: center;line-height: 0;">Some JS showcase</h5>
+                                <div id = "JS-Theem-dots">
+                                    <div id = "white-dot" class = "Js-dot"></div>
+                                    <div id = "red-dot" class = "Js-dot"></div>
+                                    <div id = "black-dot" class = "Js-dot"></div>
+                                    <div id = "blue-dot" class = "Js-dot"></div>
+                                </div>
                             </div>
                     </div>
                 </div>
