About me section added(f+l)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
                             </div>
 
                             <div class="Intro-Left">
-                                Left Column
+                                <div id="shadow_AboutMe">
+                                    <div id="About_Me">
+                                        <div id = "corner_n1" class = "corner"></div>
+                                        <div id = "corner_n2" class = "corner"></div>
+                                        <h3>What i'm doing?</h1>
+                                        <p>I'm python developer</p>
+                                        <div id = "corner_n3" class = "corner"></div>
+                                        <div id = "corner_n4" class = "corner"></div>
+                                    </div>
+                                </div>
                             </div>
 
                             <div class="Intro-Right">
