--- a/index.html
+++ b/index.html
@@ -63,7 +63,24 @@
         </section>
         <section class = 's2'>
             <div class="main">
-                About section
+                <div class="about-text">
+                    <div class="about-text-me">
+                        <h4>Something About Me</h4>
+                        <p>Building projects in Python, using different frameworks</p>
+                        <p>I will keep this as a test text </p>
+                    </div>
+
+
+                    <hr>
+
+                    <h4>Skills</h4>
+
+                    <p>Python + Django developer primary focus on Django: <a target = "_blank" href="Daniil Boika.pdf">Download Resume</a></p>
+
+                    <div class="links-to-social-media">
+                        
+                    </div>
+                </div>
             </div>
         </section>
         <section class = 's1'>
