added links to github/linkedin/twitter

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+    <!DOCTYPE HTML>
 <html>
  <head>
   <title>Daniil Boiko</title>
@@ -61,28 +61,58 @@
                     </div>
                 </div>
         </section>
-        <section class = 's2'>
-            <div class="main">
-                <div class="about-text">
-                    <div class="about-text-me">
-                        <h4>Something About Me</h4>
+        <section class="s2">
+        <div class="main">
+
+            <div class="about-text">
+                <div class="about-text-me">
+                    <h4>Some Info about Me</h4>
+
                         <p>Building projects in Python, using different frameworks</p>
+
                         <p>I will keep this as a test text </p>
-                    </div>
 
 
                     <hr>
 
                     <h4>Skills</h4>
 
-                    <p>Python + Django developer primary focus on Django: <a target = "_blank" href="Daniil Boika.pdf">Download Resume</a></p>
+                    <p>Python + Django developer primary focus on Django: <a target="_blank" href="Daniil Boika.pdf">Download Resume</a></p>
 
-                    <div class="links-to-social-media">
-                        
+                    <div id="skills">
+                        <ul>
+                            <li>Python</li>
+                            <li>Django</li>
+                            <li>Pandas</li>
+                            <li>MongoDB</li>
+                            <li>SQL(Postgres, SQLlite)</li>
+                        </ul>
+
+                        <ul>
+                            <li>Windows</li>
+                            <li>office365</li>
+                            <li>Windows Server</li>
+                        </ul>
+
                     </div>
+
+                </div>
+
+                
+                <div class="links-to-social-media">
+
+                    <h3>Find On Social Smth</h3>
+
+                    <p>LinkedIn:<a target="_blank" href="https://www.linkedin.com/in/daniil-boika-993b771b6/">Linkedin_Daniil-Boika</a></p>
+
+                    <p>GitHub:<a target="_blank" href="https://github.com/pinballtec">GitHub_pinballtec</a></p>
+
+                    <p>Twitter:<a target="_blank" href="https://twitter.com/Daniilboiko">Twitter_DaniilBoiko</a></p>
                 </div>
             </div>
-        </section>
+
+        </div>
+    </section>
         <section class = 's1'>
             <div class="main">
                 Portfolio
