--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
 
                         <p>I will keep this as a test text </p>
 
-
                     <hr>
 
                     <h4>Skills</h4>
@@ -113,14 +112,32 @@
 
         </div>
     </section>
+
         <section class = 's1'>
             <div class="main">
                 Portfolio
             </div>
         </section>
+
         <section class = 's2'>
             <div class="main">
-                Contact
+                <h3 style="text-align: center;">Contact form</h3>
+
+                <form id = "contact_form">
+                    <label>Name</label>
+                    <input class="input-field" type="text" name="name">
+
+                    <label>Subject</label>
+                    <input class="input-field" type="text" name="subject">
+
+                    <label>Email</label>
+                    <input class="input-field" type="text" name="email">
+
+                    <label>Message</label>
+                    <textarea class="input-field" type="text" name="messgae"></textarea>
+                    
+                    <input id= "submit-btn" type="submit" value="Send">
+                </form>
             </div>
         </section>
  </body>
