--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                     <div id='dot-3' class="browser-dot"></div>
                                 </div>
                                 <ul id="contacts">
-                                    <li><a href="#">Contact</a></li>
+                                    <li><a href="index.html#contact">Contact</a></li>
                                 </ul>
                             </div>
 
@@ -124,6 +124,8 @@
                 <h3 style="text-align: center;">Contact form</h3>
 
                 <form id = "contact_form">
+                    <a name="contact"></a>
+
                     <label>Name</label>
                     <input class="input-field" type="text" name="name">
 
