all frontend is finished

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                     <div id='dot-3' class="browser-dot"></div>
                                 </div>
                                 <ul id="contacts">
-                                    <li><a href="index.html#contact">Contact</a></li>
+                                    <li><a id = "some_cont" href="index.html#contact">Contact</a></li>
                                 </ul>
                             </div>
 
@@ -51,7 +51,7 @@
                             </div>
 
                             <div class="Intro-Right">
-                                <img id='photo' src="img/test.jpg">
+                                <img id='photo' src="img/photo_3.jpg">
                                 <h5 style="text-align: center;line-height: 0;">Some JS showcase</h5>
                                 <div id = "JS-Theem-dots">
                                     <div data-mode = "light" id = "white-dot" class = "Js-dot"></div>
@@ -72,13 +72,13 @@
 
                         <p>Building projects in Python, using different frameworks</p>
 
-                        <p>I will keep this as a test text </p>
+                        <p>Programming in Python for 3 years.I participated in the development of chat bots for telegrams, discord and viber. Also i was working with MongoDB. Currently focused on django and js</p>
 
                     <hr>
 
                     <h4>Skills</h4>
 
-                    <p>Python + Django developer primary focus on Django: <a target="_blank" href="Daniil Boika.pdf">Download Resume</a></p>
+                    <p>Python + Django developer, primary focus on Django: <a target="_blank" href="Daniil Boika.pdf">Download Resume</a></p>
 
                     <div id="skills">
                         <ul>
